xFLS ready to go

--- a/dmu32/dmu32_xFLS/xFLS_catalogue_merging.ipynb
+++ b/dmu32/dmu32_xFLS/xFLS_catalogue_merging.ipynb
@@ -41,7 +41,8 @@
    "source": [
     "# Set this to true to produce only the catalogue for CIGALE and to false \n",
     "# to continue and merge the CIGALE results too.\n",
-    "FIRST_RUN_FOR_CIGALE = True\n",
+    "MAKE_CIGALE_INPUT = True\n",
+    "MAKE_FINAL = False\n",
     "\n",
     "SUFFIX = '20180501'"
    ]
@@ -76,21 +77,20 @@
    },
    "outputs": [],
    "source": [
-    "# # XID+ MIPS24\n",
+    "# XID+ MIPS24\n",
     "\n",
-    "# xid_mips24 = Table.read(\"../../dmu26/dmu26_XID+MIPS_CDFS-SWIRE/data/\"\n",
-    "#                           \"dmu26_XID+MIPS_CDFS-SWIRE_cat_20170901.fits\")\n",
-    "# xid_mips24.meta = None\n",
+    "xid_mips24 = Table.read(\"../../dmu26/dmu26_XID+MIPS_xFLS/data/dmu26_XID+MIPS_xFLS_cat_20190122.fits\")\n",
+    "xid_mips24.meta = None\n",
     "\n",
-    "# # Adding the error column\n",
-    "# xid_mips24.add_column(Column(\n",
-    "#     data=np.max([xid_mips24['FErr_MIPS_24_u'] - xid_mips24['F_MIPS_24'],\n",
-    "#                  xid_mips24['F_MIPS_24'] - xid_mips24['FErr_MIPS_24_l']],\n",
-    "#                 axis=0),\n",
-    "#     name=\"ferr_mips_24\"\n",
-    "# ))\n",
-    "# xid_mips24['F_MIPS_24'].name = \"f_mips_24\"\n",
-    "# xid_mips24 = xid_mips24['help_id', 'f_mips_24', 'ferr_mips_24', 'flag_mips_24']"
+    "# Adding the error column\n",
+    "xid_mips24.add_column(Column(\n",
+    "    data=np.max([xid_mips24['FErr_MIPS_24_u'] - xid_mips24['F_MIPS_24'],\n",
+    "                 xid_mips24['F_MIPS_24'] - xid_mips24['FErr_MIPS_24_l']],\n",
+    "                axis=0),\n",
+    "    name=\"ferr_mips_24\"\n",
+    "))\n",
+    "xid_mips24['F_MIPS_24'].name = \"f_mips_24\"\n",
+    "xid_mips24 = xid_mips24['help_id', 'f_mips_24', 'ferr_mips_24', 'flag_mips_24']"
    ]
   },
   {
@@ -143,46 +143,45 @@
    },
    "outputs": [],
    "source": [
-    "# # XID+ SPIRE\n",
+    "# XID+ SPIRE\n",
     "\n",
-    "# xid_spire = Table.read(\"../../dmu26/dmu26_XID+SPIRE_CDFS-SWIRE/data/\"\n",
-    "#                          \"dmu26_XID+SPIRE_CDFS-SWIRE_cat_20170919.fits\")\n",
-    "# xid_spire.meta = None\n",
+    "xid_spire = Table.read(\"../../dmu26/dmu26_XID+SPIRE_xFLS/data/dmu26_XID+SPIRE_xFLS_cat_20190123.fits\")\n",
+    "xid_spire.meta = None\n",
     "\n",
-    "# xid_spire['HELP_ID'].name = \"help_id\"\n",
+    "xid_spire['HELP_ID'].name = \"help_id\"\n",
     "\n",
-    "# # Convert from mJy to μJy\n",
-    "# for col in [\"F_SPIRE_250\", \"FErr_SPIRE_250_u\", \"FErr_SPIRE_250_l\",\n",
-    "#             \"F_SPIRE_350\", \"FErr_SPIRE_350_u\", \"FErr_SPIRE_350_l\",\n",
-    "#             \"F_SPIRE_500\", \"FErr_SPIRE_500_u\", \"FErr_SPIRE_500_l\"]:\n",
-    "#     xid_spire[col] *= 1000\n",
+    "# Convert from mJy to μJy\n",
+    "for col in [\"F_SPIRE_250\", \"FErr_SPIRE_250_u\", \"FErr_SPIRE_250_l\",\n",
+    "            \"F_SPIRE_350\", \"FErr_SPIRE_350_u\", \"FErr_SPIRE_350_l\",\n",
+    "            \"F_SPIRE_500\", \"FErr_SPIRE_500_u\", \"FErr_SPIRE_500_l\"]:\n",
+    "    xid_spire[col] *= 1000\n",
     "\n",
-    "# xid_spire.add_column(Column(\n",
-    "#     data=np.max([xid_spire['FErr_SPIRE_250_u'] - xid_spire['F_SPIRE_250'],\n",
-    "#                  xid_spire['F_SPIRE_250'] - xid_spire['FErr_SPIRE_250_l']],\n",
-    "#                 axis=0),\n",
-    "#     name=\"ferr_spire_250\"\n",
-    "# ))\n",
-    "# xid_spire['F_SPIRE_250'].name = \"f_spire_250\"\n",
-    "# xid_spire.add_column(Column(\n",
-    "#     data=np.max([xid_spire['FErr_SPIRE_350_u'] - xid_spire['F_SPIRE_350'],\n",
-    "#                  xid_spire['F_SPIRE_350'] - xid_spire['FErr_SPIRE_350_l']],\n",
-    "#                 axis=0),\n",
-    "#     name=\"ferr_spire_350\"\n",
-    "# ))\n",
-    "# xid_spire['F_SPIRE_350'].name = \"f_spire_350\"\n",
-    "# xid_spire.add_column(Column(\n",
-    "#     data=np.max([xid_spire['FErr_SPIRE_500_u'] - xid_spire['F_SPIRE_500'],\n",
-    "#                  xid_spire['F_SPIRE_500'] - xid_spire['FErr_SPIRE_500_l']],\n",
-    "#                 axis=0),\n",
-    "#     name=\"ferr_spire_500\"\n",
-    "# ))\n",
-    "# xid_spire['F_SPIRE_500'].name = \"f_spire_500\"\n",
+    "xid_spire.add_column(Column(\n",
+    "    data=np.max([xid_spire['FErr_SPIRE_250_u'] - xid_spire['F_SPIRE_250'],\n",
+    "                 xid_spire['F_SPIRE_250'] - xid_spire['FErr_SPIRE_250_l']],\n",
+    "                axis=0),\n",
+    "    name=\"ferr_spire_250\"\n",
+    "))\n",
+    "xid_spire['F_SPIRE_250'].name = \"f_spire_250\"\n",
+    "xid_spire.add_column(Column(\n",
+    "    data=np.max([xid_spire['FErr_SPIRE_350_u'] - xid_spire['F_SPIRE_350'],\n",
+    "                 xid_spire['F_SPIRE_350'] - xid_spire['FErr_SPIRE_350_l']],\n",
+    "                axis=0),\n",
+    "    name=\"ferr_spire_350\"\n",
+    "))\n",
+    "xid_spire['F_SPIRE_350'].name = \"f_spire_350\"\n",
+    "xid_spire.add_column(Column(\n",
+    "    data=np.max([xid_spire['FErr_SPIRE_500_u'] - xid_spire['F_SPIRE_500'],\n",
+    "                 xid_spire['F_SPIRE_500'] - xid_spire['FErr_SPIRE_500_l']],\n",
+    "                axis=0),\n",
+    "    name=\"ferr_spire_500\"\n",
+    "))\n",
+    "xid_spire['F_SPIRE_500'].name = \"f_spire_500\"\n",
     "\n",
-    "# xid_spire = xid_spire['help_id',\n",
-    "#                       'f_spire_250', 'ferr_spire_250', 'flag_spire_250',\n",
-    "#                       'f_spire_350', 'ferr_spire_350', 'flag_spire_350',\n",
-    "#                       'f_spire_500', 'ferr_spire_500', 'flag_spire_500']"
+    "xid_spire = xid_spire['help_id',\n",
+    "                      'f_spire_250', 'ferr_spire_250', 'flag_spire_250',\n",
+    "                      'f_spire_350', 'ferr_spire_350', 'flag_spire_350',\n",
+    "                      'f_spire_500', 'ferr_spire_500', 'flag_spire_500']"
    ]
   },
   {
@@ -195,13 +194,12 @@
    "source": [
     "# Photo-z\n",
     "\n",
-    "#photoz = Table.read(\"../../dmu24/dmu24_/data/\")\n",
-    "#photoz.meta = None\n",
+    "photoz = Table.read(\"../../dmu24/dmu24_xFLS/data/xFLS_DESI-DR7_Zou_et_al_2019_photo_z_withhelp_id.fits\")\n",
+    "photoz.meta = None\n",
     "\n",
-    "#photoz = photoz['help_id', 'z1_median']\n",
-    "#photoz['z1_median'].name = 'redshift'\n",
-    "\n",
-    "#photoz['redshift'][photoz['redshift'] < 0] = np.nan  # -99 used for missing values"
+    "photoz = photoz['help_id', 'photo_z']\n",
+    "photoz['photo_z'].name = 'redshift'\n",
+    "photoz['redshift'][photoz['redshift'] < 0] = np.nan  # -99 used for missing values"
    ]
   },
   {
@@ -253,15 +251,15 @@
    },
    "outputs": [],
    "source": [
-    "# merged_table = join(ml, xid_mips24, join_type='left')\n",
+    "merged_table = join(ml, xid_mips24, join_type='left')\n",
     "\n",
-    "# # Fill values\n",
-    "# for col in xid_mips24.colnames:\n",
-    "#     if col.startswith(\"f_\") or col.startswith(\"ferr_\"):\n",
-    "#         merged_table[col].fill_value = np.nan\n",
-    "#     elif col.startswith(\"flag_\"):\n",
-    "#         merged_table[col].fill_value = False\n",
-    "# merged_table = merged_table.filled()"
+    "# Fill values\n",
+    "for col in xid_mips24.colnames:\n",
+    "    if col.startswith(\"f_\") or col.startswith(\"ferr_\"):\n",
+    "        merged_table[col].fill_value = np.nan\n",
+    "    elif col.startswith(\"flag_\"):\n",
+    "        merged_table[col].fill_value = False\n",
+    "merged_table = merged_table.filled()"
    ]
   },
   {
@@ -291,15 +289,15 @@
    },
    "outputs": [],
    "source": [
-    "# merged_table = join(merged_table, xid_spire, join_type='left')\n",
+    "merged_table = join(merged_table, xid_spire, join_type='left')\n",
     "        \n",
-    "# # Fill values\n",
-    "# for col in xid_spire.colnames:\n",
-    "#     if col.startswith(\"f_\") or col.startswith(\"ferr_\"):\n",
-    "#         merged_table[col].fill_value = np.nan\n",
-    "#     elif col.startswith(\"flag_\"):\n",
-    "#         merged_table[col].fill_value = False\n",
-    "# merged_table = merged_table.filled()"
+    "# Fill values\n",
+    "for col in xid_spire.colnames:\n",
+    "    if col.startswith(\"f_\") or col.startswith(\"ferr_\"):\n",
+    "        merged_table[col].fill_value = np.nan\n",
+    "    elif col.startswith(\"flag_\"):\n",
+    "        merged_table[col].fill_value = False\n",
+    "merged_table = merged_table.filled()"
    ]
   },
   {
@@ -310,22 +308,11 @@
    },
    "outputs": [],
    "source": [
-    "#merged_table = join(merged_table, photoz, join_type='left')\n",
+    "merged_table = join(merged_table, photoz, join_type='left')\n",
     "\n",
     "# Fill values\n",
-    "#merged_table['redshift'].fill_value = np.nan\n",
-    "#merged_table = merged_table.filled()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "merged_table = ml"
+    "merged_table['redshift'].fill_value = np.nan\n",
+    "merged_table = merged_table.filled()"
    ]
   },
   {
@@ -386,7 +373,7 @@
     }
    ],
    "source": [
-    "if FIRST_RUN_FOR_CIGALE:\n",
+    "if MAKE_CIGALE_INPUT:\n",
     "    \n",
     "    # Sorting the columns\n",
     "    bands_tot = [col[2:] for col in merged_table.colnames\n",
@@ -435,32 +422,40 @@
    },
    "outputs": [],
    "source": [
-    "if not FIRST_RUN_FOR_CIGALE:\n",
+    "if MAKE_FINAL:\n",
     "\n",
     "    # Cigale outputs\n",
-    "    cigale = Table.read(\"../../dmu28/dmu28_CDFS-SWIRE/data/HELP_final_results.fits\")\n",
+    "    cigale = Table.read(\"../../dmu28/dmu28_xFLS/data/HELP_final_results.fits\")\n",
     "    cigale['id'].name = \"help_id\"\n",
     "\n",
     "    # We convert the various Chi2 and threshold to flags\n",
-    "    flag_cigale_opt = cigale[\"UVoptIR_OPTchi2\"] <= cigale[\"UVoptIR_OPTchi2_threshold\"]\n",
-    "    flag_cigale_ir = cigale[\"UVoptIR_IRchi2\"] <= cigale[\"UVoptIR_IRchi2_threshold\"]\n",
-    "    flag_cigale = (\n",
-    "        (cigale[\"UVoptIR_best.reduced_chi_square\"] \n",
-    "             <=  cigale[\"UVoptIR_best.reduced_chi_square_threshold\"]) &\n",
-    "        flag_cigale_opt & flag_cigale_ir)\n",
-    "    flag_cigale_ironly = cigale[\"IRonly_IRchi2\"] <= cigale[\"IRonly_IRchi2_threshold\"]\n",
+    "    # UPDATE - we no longer do this and instead provide the chi2 values \n",
+    "    #flag_cigale_opt = cigale[\"UVoptIR_OPTchi2\"] <= cigale[\"UVoptIR_OPTchi2_threshold\"]\n",
+    "    #flag_cigale_ir = cigale[\"UVoptIR_IRchi2\"] <= cigale[\"UVoptIR_IRchi2_threshold\"]\n",
+    "    #flag_cigale = (\n",
+    "    #    (cigale[\"UVoptIR_best.reduced_chi_square\"] \n",
+    "    #         <=  cigale[\"UVoptIR_best.reduced_chi_square_threshold\"]) &\n",
+    "    #    flag_cigale_opt & flag_cigale_ir)\n",
+    "    #flag_cigale_ironly = cigale[\"IRonly_IRchi2\"] <= cigale[\"IRonly_IRchi2_threshold\"]\n",
     "\n",
-    "    cigale.add_columns([\n",
-    "        MaskedColumn(flag_cigale, \"flag_cigale\", \n",
-    "                     dtype=int, fill_value=-1),\n",
-    "        MaskedColumn(flag_cigale_opt, \"flag_cigale_opt\", \n",
-    "                     dtype=int, fill_value=-1),\n",
-    "        MaskedColumn(flag_cigale_ir, \"flag_cigale_ir\", \n",
-    "                     dtype=int, fill_value=-1),\n",
-    "        MaskedColumn(flag_cigale_ironly, \"flag_cigale_ironly\", \n",
-    "                     dtype=int, fill_value=-1)\n",
-    "    ])\n",
-    "\n",
+    "    #cigale.add_columns([\n",
+    "    #    MaskedColumn(flag_cigale, \"flag_cigale\", \n",
+    "    #                 dtype=int, fill_value=-1),\n",
+    "    #    MaskedColumn(flag_cigale_opt, \"flag_cigale_opt\", \n",
+    "    #                 dtype=int, fill_value=-1),\n",
+    "    #    MaskedColumn(flag_cigale_ir, \"flag_cigale_ir\", \n",
+    "    #                 dtype=int, fill_value=-1),\n",
+    "    #    MaskedColumn(flag_cigale_ironly, \"flag_cigale_ironly\", \n",
+    "    #                 dtype=int, fill_value=-1)\n",
+    "    #])\n",
+    "    \n",
+    "    #UPDATE Instead of flags above we include all cols used to make \n",
+    "    #deprecated flags\n",
+    "    cigale[\"UVoptIR_OPTchi2\"].name                 =  \"cigale_chi2_opt\"\n",
+    "    cigale[\"UVoptIR_IRchi2\"].name                  =  \"cigale_chi2_ir\"\n",
+    "    cigale[\"UVoptIR_best.reduced_chi_square\"].name =  \"cigale_chi2_red\"\n",
+    "    cigale[\"IRonly_IRchi2\"].name                   =  \"cigale_chi2_ironly\"\n",
+    "    \n",
     "    cigale['UVoptIR_bayes.stellar.m_star'].name =  \"cigale_mstar\"\n",
     "    cigale['UVoptIR_bayes.stellar.m_star_err'].name = \"cigale_mstar_err\"\n",
     "    cigale['UVoptIR_bayes.sfh.sfr10Myrs'].name = \"cigale_sfr\"\n",
@@ -473,8 +468,11 @@
     "    cigale = cigale['help_id', 'cigale_mstar', 'cigale_mstar_err', 'cigale_sfr',\n",
     "                    'cigale_sfr_err', 'cigale_dustlumin', 'cigale_dustlumin_err', \n",
     "                    'cigale_dustlumin_ironly', 'cigale_dustlumin_ironly_err', \n",
-    "                    'flag_cigale', 'flag_cigale_opt', 'flag_cigale_ir', \n",
-    "                    'flag_cigale_ironly']"
+    "                    #Old flags\n",
+    "                    #'flag_cigale', 'flag_cigale_opt', 'flag_cigale_ir', 'flag_cigale_ironly'\n",
+    "                    #New chi2 values\n",
+    "                    \"cigale_chi2_opt\", \"cigale_chi2_ir\", \"cigale_chi2_red\", \"cigale_chi2_ironly\"\n",
+    "                   ]"
    ]
   },
   {
@@ -485,7 +483,7 @@
    },
    "outputs": [],
    "source": [
-    "if not FIRST_RUN_FOR_CIGALE:\n",
+    "if MAKE_FINAL:\n",
     "\n",
     "    merged_table = join(merged_table, cigale, join_type='left')\n",
     "\n",
@@ -515,7 +513,7 @@
    },
    "outputs": [],
    "source": [
-    "if not FIRST_RUN_FOR_CIGALE:\n",
+    "if MAKE_FINAL:\n",
     "\n",
     "    bands = [col[2:] for col in merged_table.colnames\n",
     "             if col.startswith('f_') and not col.startswith('f_ap')]\n",
@@ -530,7 +528,7 @@
    },
    "outputs": [],
    "source": [
-    "if not FIRST_RUN_FOR_CIGALE:\n",
+    "if MAKE_FINAL_CAT:\n",
     "\n",
     "    columns = ['help_id', 'field', 'ra', 'dec', 'hp_idx', 'ebv', 'redshift', 'zspec']\n",
     "    for band in bands:\n",
@@ -542,8 +540,12 @@
     "                columns.append(colname)\n",
     "    columns += ['cigale_mstar', 'cigale_mstar_err', 'cigale_sfr', 'cigale_sfr_err',\n",
     "                'cigale_dustlumin', 'cigale_dustlumin_err', 'cigale_dustlumin_ironly', \n",
-    "                'cigale_dustlumin_ironly_err', 'flag_cigale', 'flag_cigale_opt', \n",
-    "                'flag_cigale_ir', 'flag_cigale_ironly', 'stellarity', \n",
+    "                'cigale_dustlumin_ironly_err', \n",
+    "                #Old flags\n",
+    "                #'flag_cigale', 'flag_cigale_opt', 'flag_cigale_ir', 'flag_cigale_ironly'\n",
+    "                #New chi2 values\n",
+    "                'cigale_chi2_opt', 'cigale_chi2_ir', 'cigale_chi2_red', 'cigale_chi2_ironly',\n",
+    "                'stellarity', \n",
     "                'stellarity_origin', 'flag_cleaned', 'flag_merged', 'flag_gaia', \n",
     "                'flag_optnir_obs', 'flag_optnir_det', 'zspec_qual', \n",
     "                'zspec_association_flag']"
@@ -557,7 +559,7 @@
    },
    "outputs": [],
    "source": [
-    "if not FIRST_RUN_FOR_CIGALE:\n",
+    "if MAKE_FINAL:\n",
     "\n",
     "    # Check that we did not forget any column\n",
     "    assert set(columns) == set(merged_table.colnames)"
@@ -578,9 +580,9 @@
    },
    "outputs": [],
    "source": [
-    "if not FIRST_RUN_FOR_CIGALE:\n",
+    "if MAKE_FINAL:\n",
     "\n",
-    "    merged_table[columns].write(\"data/CDFS-SWIRE.fits\")"
+    "    merged_table[columns].write(\"data/xFLS.fits\")"
    ]
   }
  ],
@@ -600,7 +602,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
