Fix issue with desi phot-z

--- a/dmu24/dmu24_ELAIS-N2/Make_cat_from_DESI_LagacyDR7.ipynb
+++ b/dmu24/dmu24_ELAIS-N2/Make_cat_from_DESI_LagacyDR7.ipynb
@@ -352,6 +352,8 @@
     "photoz = photoz.filled()\n",
     "has_help = photoz['help_id'] != ''\n",
     "has_z = ~np.isnan(photoz['photo_z'])\n",
+    "photoz = photoz['help_id', 'id', 'ra', 'dec', 'photo_z', 'photo_zerr']\n",
+    "photoz.meta = None\n",
     "photoz[has_help & has_z].write('./data/ELAIS-N2_DESI-DR7_Zou_et_al_2019_photo_z_withhelp_id.fits', overwrite=True)"
    ]
   },
