--- a/dmu28/dmu28_xFLS/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_xFLS/CIGALE_catalogue_preparation.ipynb
@@ -33,7 +33,7 @@
    },
    "outputs": [],
    "source": [
-    "SUFFIX = '20180221'\n",
+    "SUFFIX = '20180501'\n",
     "\n",
     "master_catalogue = Table.read(\"../../dmu32/dmu32_xFLS/data/xFLS_{}_cigale.fits\".format(SUFFIX))"
    ]
@@ -80,12 +80,12 @@
    },
    "outputs": [],
    "source": [
-    "# good = {}\n",
-    "# for band in ['pacs_green', 'pacs_red', 'spire_250', 'spire_350', 'spire_500']:\n",
-    "#     good[band] = (~np.isnan(master_catalogue['f_{}'.format(band)]) & \n",
-    "#                                    ~master_catalogue['flag_{}'.format(band)])\n",
-    "#     good[band][good[band]] &= (master_catalogue[good[band]]['f_{}'.format(band)] /\n",
-    "#                               master_catalogue[good[band]]['ferr_{}'.format(band)] >= 2)"
+    "good = {}\n",
+    "for band in ['pacs_green', 'pacs_red', 'spire_250', 'spire_350', 'spire_500']:\n",
+    "    good[band] = (~np.isnan(master_catalogue['f_{}'.format(band)]) & \n",
+    "                                   ~master_catalogue['flag_{}'.format(band)])\n",
+    "    good[band][good[band]] &= (master_catalogue[good[band]]['f_{}'.format(band)] /\n",
+    "                              master_catalogue[good[band]]['ferr_{}'.format(band)] >= 2)"
    ]
   },
   {
@@ -103,7 +103,7 @@
    },
    "outputs": [],
    "source": [
-    "# combined_good = np.sum(list(good.values()), axis=0) >= 2"
+    "combined_good = np.sum(list(good.values()), axis=0) >= 2"
    ]
   },
   {
@@ -114,7 +114,7 @@
    },
    "outputs": [],
    "source": [
-    "# print(\"Number of good sources: {}\".format(np.sum(combined_good)))"
+    "print(\"Number of good sources: {}\".format(np.sum(combined_good)))"
    ]
   },
   {
@@ -145,7 +145,7 @@
    },
    "outputs": [],
    "source": [
-    "# best_catalogue = master_catalogue[combined_good].copy()"
+    "best_catalogue = master_catalogue[combined_good].copy()"
    ]
   },
   {
@@ -157,7 +157,7 @@
    "outputs": [],
    "source": [
     "# # Correction for galactic extinction\n",
-    "# best_catalogue = correct_galactic_extinction(best_catalogue, inplace=True)"
+    "best_catalogue = correct_galactic_extinction(best_catalogue, inplace=True)"
    ]
   },
   {
@@ -170,7 +170,7 @@
    "outputs": [],
    "source": [
     "# # Convertion to CIGALE format\n",
-    "# best_catalogue = convert_table_for_cigale(best_catalogue, inplace=True, remove_zerofluxes=True)"
+    "best_catalogue = convert_table_for_cigale(best_catalogue, inplace=True, remove_zerofluxes=True)"
    ]
   },
   {
@@ -214,12 +214,12 @@
    },
    "outputs": [],
    "source": [
-    "#remove_unneeded_fluxes(g_bands)\n",
-    "#remove_unneeded_fluxes(u_bands)\n",
-    "#remove_unneeded_fluxes(r_bands)\n",
-    "#remove_unneeded_fluxes(i_bands)\n",
-    "#remove_unneeded_fluxes(z_bands)\n",
-    "#remove_unneeded_fluxes(y_bands)"
+    "remove_unneeded_fluxes(u_bands)\n",
+    "remove_unneeded_fluxes(g_bands)\n",
+    "remove_unneeded_fluxes(r_bands)\n",
+    "remove_unneeded_fluxes(i_bands)\n",
+    "remove_unneeded_fluxes(z_bands)\n",
+    "remove_unneeded_fluxes(y_bands)"
    ]
   },
   {
@@ -230,7 +230,7 @@
    },
    "outputs": [],
    "source": [
-    "#best_catalogue.write(\"data_tmp/CDFS-SWIRE_cigale_best_extcor_20180129.fits\")"
+    "best_catalogue.write(\"data_tmp/xFLS_cigale_best_extcor_{}.fits\".format(SUFFIX), overwrite=True)"
    ]
   },
   {
@@ -248,7 +248,7 @@
    },
    "outputs": [],
    "source": [
-    "best_catalogue = master_catalogue[optnir].copy()"
+    "best_catalogue = master_catalogue[combined_good].copy()"
    ]
   },
   {
@@ -259,8 +259,8 @@
    },
    "outputs": [],
    "source": [
-    "#best_catalogue.remove_column(\"redshift\")\n",
-    "#best_catalogue[\"zspec\"].name = \"redshift\""
+    "best_catalogue.remove_column(\"redshift\")\n",
+    "best_catalogue[\"zspec\"].name = \"redshift\""
    ]
   },
   {
@@ -326,8 +326,8 @@
    },
    "outputs": [],
    "source": [
-    "remove_unneeded_fluxes(g_bands)\n",
     "remove_unneeded_fluxes(u_bands)\n",
+    "remove_unneeded_fluxes(g_bands)\n",
     "remove_unneeded_fluxes(r_bands)\n",
     "remove_unneeded_fluxes(i_bands)\n",
     "remove_unneeded_fluxes(z_bands)\n",
@@ -342,7 +342,7 @@
    },
    "outputs": [],
    "source": [
-    "best_catalogue.write(\"data_tmp/xFLS_cigale_optnir_extcor_zspec_{}.fits\".format(SUFFIX), overwrite=True)"
+    "best_catalogue.write(\"data_tmp/xFLS_cigale_best_extcor_zspec_{}.fits\".format(SUFFIX), overwrite=True)"
    ]
   }
  ],
@@ -362,7 +362,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
