Made CIGALE input on xFLS

--- a/dmu28/dmu28_xFLS/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_xFLS/CIGALE_catalogue_preparation.ipynb
@@ -81,7 +81,7 @@
    "outputs": [],
    "source": [
     "good = {}\n",
-    "for band in ['pacs_green', 'pacs_red', 'spire_250', 'spire_350', 'spire_500']:\n",
+    "for band in [ 'spire_250', 'spire_350', 'spire_500']:\n",
     "    good[band] = (~np.isnan(master_catalogue['f_{}'.format(band)]) & \n",
     "                                   ~master_catalogue['flag_{}'.format(band)])\n",
     "    good[band][good[band]] &= (master_catalogue[good[band]]['f_{}'.format(band)] /\n",
@@ -112,7 +112,15 @@
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of good sources: 11101\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Number of good sources: {}\".format(np.sum(combined_good)))"
    ]
@@ -285,7 +293,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of sources with z-spec: 0\n"
+      "Number of sources with z-spec: 970\n"
      ]
     }
    ],
@@ -311,7 +319,18 @@
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:herschelhelp.external:For 16 sources, the band wfc_u should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
+      "INFO:herschelhelp.external:For 3 sources, the band 90prime_g should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
+      "INFO:herschelhelp.external:For 3 sources, the band gpc1_g should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
+      "INFO:herschelhelp.external:For 3 sources, the band wfc_g should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n"
+     ]
+    }
+   ],
    "source": [
     "# Convertion to CIGALE format\n",
     "os.environ['LOG_LEVEL'] = 'INFO'\n",
@@ -362,7 +381,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
