--- a/dmu32/dmu32_xFLS/xFLS_catalogue_merging.ipynb
+++ b/dmu32/dmu32_xFLS/xFLS_catalogue_merging.ipynb
@@ -368,7 +368,7 @@
      "output_type": "stream",
      "text": [
       "set()\n",
-      "{'flag_irac_i2_ap', 'flag_irac_i1_ap', 'flag_irac_i3_ap', 'flag_irac_i4_ap', 'redshift'}\n"
+      "{'flag_irac_i3_ap', 'flag_irac_i2_ap', 'flag_irac_i4_ap', 'flag_irac_i1_ap'}\n"
      ]
     },
     {
@@ -391,7 +391,7 @@
     "    bands = list(set(bands_tot) | set(bands_ap))\n",
     "    bands.sort(key=lambda x: filter_mean_lambda[x])\n",
     "    \n",
-    "    columns = ['help_id', 'field', 'ra', 'dec', 'hp_idx', 'ebv',# 'redshift', \n",
+    "    columns = ['help_id', 'field', 'ra', 'dec', 'hp_idx', 'ebv', 'redshift', \n",
     "               'zspec']\n",
     "    for band in bands:\n",
     "        for col_tpl in ['f_{}', 'ferr_{}', 'f_ap_{}', 'ferr_ap_{}',\n",
