--- a/dmu32/the_end.ipynb
+++ b/dmu32/the_end.ipynb
@@ -27,7 +27,7 @@
       "This notebook was run with herschelhelp_internal version: \n",
       "017bb1e (Mon Jun 18 14:58:59 2018 +0100)\n",
       "This notebook was executed on: \n",
-      "2019-09-24 19:58:28.513629\n"
+      "2019-09-26 16:02:44.026670\n"
      ]
     }
    ],
@@ -110,7 +110,7 @@
      "data": {
       "text/html": [
        "<i>Table length=23</i>\n",
-       "<table id=\"table140622550763840-542127\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140405214643760-815752\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>idx</th><th>field</th><th>dr1_suffix</th><th>last_suffix</th><th>objects</th><th>area_sq_degrees</th><th>file_size_bytes</th><th>file_size_readable</th></tr></thead>\n",
        "<tr><td>0</td><td>AKARI-NEP</td><td>20180215</td><td>20180215</td><td>531746</td><td>9.194732358779467</td><td>348848640</td><td>348.85 MB</td></tr>\n",
        "<tr><td>1</td><td>AKARI-SEP</td><td>20180221</td><td>20180221</td><td>844172</td><td>8.713306475131118</td><td>538606080</td><td>538.61 MB</td></tr>\n",
@@ -158,14 +158,14 @@
        "    datatables: 'https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min'\n",
        "}});\n",
        "require([\"datatables\"], function(){\n",
-       "    console.log(\"$('#table140622550763840-542127').dataTable()\");\n",
+       "    console.log(\"$('#table140405214643760-815752').dataTable()\");\n",
        "    \n",
        "jQuery.extend( jQuery.fn.dataTableExt.oSort, {\n",
        "    \"optionalnum-asc\": astropy_sort_num,\n",
        "    \"optionalnum-desc\": function (a,b) { return -astropy_sort_num(a, b); }\n",
        "});\n",
        "\n",
-       "    $('#table140622550763840-542127').dataTable({\n",
+       "    $('#table140405214643760-815752').dataTable({\n",
        "        order: [],\n",
        "        pageLength: 50,\n",
        "        lengthMenu: [[10, 25, 50, 100, 500, 1000, -1], [10, 25, 50, 100, 500, 1000, 'All']],\n",
@@ -361,8 +361,12 @@
      "output_type": "stream",
      "text": [
       "AKARI-NEP:\n",
-      "0 N N\n",
-      "  - xid not done.\n",
+      "0 dmu_products/dmu26/dmu26_XID+MIPS_AKARI-NEP/data/dmu26_XID+MIPS_AKARI-NEP_cat_20190227.fits ../dmu26/dmu26_XID+MIPS_AKARI-NEP/data/dmu26_XID+MIPS_AKARI-NEP_cat_20190227.fits\n",
+      "  - xid: dmu_products/dmu26/dmu26_XID+MIPS_AKARI-NEP/data/dmu26_XID+MIPS_AKARI-NEP_cat_20190227.fits\n",
+      "1 dmu_products/dmu26/dmu26_XID+PACS_AKARI-NEP/data/dmu26_XID+PACS_AKARI-NEP_cat.fits ../dmu26/dmu26_XID+PACS_AKARI-NEP/data/dmu26_XID+PACS_AKARI-NEP_cat.fits\n",
+      "  - xid: dmu_products/dmu26/dmu26_XID+PACS_AKARI-NEP/data/dmu26_XID+PACS_AKARI-NEP_cat.fits\n",
+      "2 dmu_products/dmu26/dmu26_XID+SPIRE_AKARI-NEP/data/dmu26_XID+SPIRE_AKARI-NEP_cat_20190312.fits ../dmu26/dmu26_XID+SPIRE_AKARI-NEP/data/dmu26_XID+SPIRE_AKARI-NEP_cat_20190312.fits\n",
+      "  - xid: dmu_products/dmu26/dmu26_XID+SPIRE_AKARI-NEP/data/dmu26_XID+SPIRE_AKARI-NEP_cat_20190312.fits\n",
       "  - photoz not done.\n",
       "  - cigale not done.\n",
       "AKARI-SEP:\n",
@@ -451,7 +455,7 @@
       "HDF-N:\n",
       "0 N N\n",
       "  - xid not done.\n",
-      "  - photoz not done.\n",
+      "  - photoz: dmu_products/dmu24/dmu24_HDF-N/data/HDF-N_DESI-DR7_Zou_et_al_2019_photo_z_withhelp_id.fits\n",
       "  - cigale not done.\n",
       "Herschel-Stripe-82:\n",
       "0 dmu_products/dmu26/dmu26_XID+MIPS_Herschel-Stripe-82/data/dmu26_XID+MIPS_Herschel-Stripe-82_cat_20190917.fits ../dmu26/dmu26_XID+MIPS_Herschel-Stripe-82/data/dmu26_XID+MIPS_Herschel-Stripe-82_cat_20190917.fits\n",
@@ -475,7 +479,7 @@
       "SA13:\n",
       "0 N N\n",
       "  - xid not done.\n",
-      "  - photoz not done.\n",
+      "  - photoz: dmu_products/dmu24/dmu24_SA13/data/SA13_DESI-DR7_Zou_et_al_2019_photo_z_withhelp_id.fits\n",
       "  - cigale not done.\n",
       "HATLAS-SGP:\n",
       "0 dmu_products/dmu26/dmu26_XID+SPIRE_SGP/data/dmu26_XID+SPIRE_SGP_20180625.fits ../dmu26/dmu26_XID+SPIRE_SGP/data/dmu26_XID+SPIRE_SGP_20180625.fits\n",
@@ -493,14 +497,16 @@
       "  - photoz: dmu_products/dmu24/dmu24_SSDF/data/master_catalogue_ssdf_20180221_photoz_20180612_r_optimised.fits\n",
       "  - cigale not done.\n",
       "xFLS:\n",
-      "0 N N\n",
-      "  - xid not done.\n",
-      "  - photoz not done.\n",
+      "0 dmu_products/dmu26/dmu26_XID+MIPS_xFLS/data/dmu26_XID+MIPS_xFLS_cat_20190122.fits ../dmu26/dmu26_XID+MIPS_xFLS/data/dmu26_XID+MIPS_xFLS_cat_20190122.fits\n",
+      "  - xid: dmu_products/dmu26/dmu26_XID+MIPS_xFLS/data/dmu26_XID+MIPS_xFLS_cat_20190122.fits\n",
+      "1 dmu_products/dmu26/dmu26_XID+SPIRE_xFLS/data/dmu26_XID+SPIRE_xFLS_cat_20190123.fits ../dmu26/dmu26_XID+SPIRE_xFLS/data/dmu26_XID+SPIRE_xFLS_cat_20190123.fits\n",
+      "  - xid: dmu_products/dmu26/dmu26_XID+SPIRE_xFLS/data/dmu26_XID+SPIRE_xFLS_cat_20190123.fits\n",
+      "  - photoz: dmu_products/dmu24/dmu24_xFLS/data/xFLS_DESI-DR7_Zou_et_al_2019_photo_z_withhelp_id.fits\n",
       "  - cigale not done.\n",
       "XMM-13hr:\n",
       "0 N N\n",
       "  - xid not done.\n",
-      "  - photoz not done.\n",
+      "  - photoz: dmu_products/dmu24/dmu24_XMM-13hr/data/XMM-13hr_DESI-DR7_Zou_et_al_2019_photo_z_withhelp_id.fits\n",
       "  - cigale not done.\n",
       "XMM-LSS:\n",
       "0 dmu_products/dmu26/dmu26_XID+MIPS_XMM-LSS/data/dmu26_XID+MIPS_XMM-LSS_SPUDS_cat_20181210.fits ../dmu26/dmu26_XID+MIPS_XMM-LSS/data/dmu26_XID+MIPS_XMM-LSS_SPUDS_cat_20181210.fits\n",
@@ -565,9 +571,9 @@
      "data": {
       "text/html": [
        "<i>Table length=23</i>\n",
-       "<table id=\"table140620039246344-582025\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140405143754680-748568\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>idx</th><th>field</th><th>dr1_suffix</th><th>last_suffix</th><th>objects</th><th>area_sq_degrees</th><th>file_size_bytes</th><th>file_size_readable</th><th>xid_objects</th><th>photoz_objects</th><th>cigale_objects</th></tr></thead>\n",
-       "<tr><td>0</td><td>AKARI-NEP</td><td>20180215</td><td>20180215</td><td>531746</td><td>9.194732358779467</td><td>348848640</td><td>348.85 MB</td><td>0</td><td>0</td><td>0</td></tr>\n",
+       "<tr><td>0</td><td>AKARI-NEP</td><td>20180215</td><td>20180215</td><td>531746</td><td>9.194732358779467</td><td>348848640</td><td>348.85 MB</td><td>35319</td><td>0</td><td>0</td></tr>\n",
        "<tr><td>1</td><td>AKARI-SEP</td><td>20180221</td><td>20180221</td><td>844172</td><td>8.713306475131118</td><td>538606080</td><td>538.61 MB</td><td>211453</td><td>0</td><td>0</td></tr>\n",
        "<tr><td>2</td><td>Bootes</td><td>20180520</td><td>20190201</td><td>3481661</td><td>11.42815299095486</td><td>5002044480</td><td>5 GB</td><td>495159</td><td>1657470</td><td>38660</td></tr>\n",
        "<tr><td>3</td><td>CDFS-SWIRE</td><td>20180613</td><td>20180613</td><td>2171051</td><td>12.971246403717068</td><td>5705593920</td><td>5.71 GB</td><td>240489</td><td>139532</td><td>9308</td></tr>\n",
@@ -579,16 +585,16 @@
        "<tr><td>9</td><td>GAMA-09</td><td>20180601</td><td>20190123</td><td>12937982</td><td>62.01393417284915</td><td>19911611520</td><td>19.91 GB</td><td>1386659</td><td>8834023</td><td>130293</td></tr>\n",
        "<tr><td>10</td><td>GAMA-12</td><td>20180218</td><td>20190128</td><td>12369415</td><td>62.70933280772107</td><td>14633066880</td><td>14.63 GB</td><td>1099477</td><td>8591676</td><td>108139</td></tr>\n",
        "<tr><td>11</td><td>GAMA-15</td><td>20180213</td><td>20190201</td><td>14232880</td><td>61.70114565980842</td><td>16595585280</td><td>16.6 GB</td><td>1236395</td><td>10109159</td><td>117234</td></tr>\n",
-       "<tr><td>12</td><td>HDF-N</td><td>20180427</td><td>20180427</td><td>130679</td><td>0.6717832558166041</td><td>185996160</td><td>186 MB</td><td>0</td><td>0</td><td>0</td></tr>\n",
+       "<tr><td>12</td><td>HDF-N</td><td>20180427</td><td>20180427</td><td>130679</td><td>0.6717832558166041</td><td>185996160</td><td>186 MB</td><td>0</td><td>7451</td><td>0</td></tr>\n",
        "<tr><td>13</td><td>Herschel-Stripe-82</td><td>20180307</td><td>20190205</td><td>50196455</td><td>363.22747930641884</td><td>127047306240</td><td>127.05 GB</td><td>76084</td><td>21613821</td><td>0</td></tr>\n",
        "<tr><td>14</td><td>Lockman-SWIRE</td><td>20180219</td><td>20180219</td><td>4366298</td><td>22.413863402949218</td><td>5195931840</td><td>5.2 GB</td><td>242065</td><td>1382438</td><td>46719</td></tr>\n",
        "<tr><td>15</td><td>NGP</td><td>20180219</td><td>20190204</td><td>6759591</td><td>177.6981971077162</td><td>4954806720</td><td>4.95 GB</td><td>1233547</td><td>3175339</td><td>185290</td></tr>\n",
-       "<tr><td>16</td><td>SA13</td><td>20180501</td><td>20180501</td><td>9799</td><td>0.27416379328431184</td><td>2721600</td><td>2.72 MB</td><td>0</td><td>0</td><td>0</td></tr>\n",
+       "<tr><td>16</td><td>SA13</td><td>20180501</td><td>20180501</td><td>9799</td><td>0.27416379328431184</td><td>2721600</td><td>2.72 MB</td><td>0</td><td>2891</td><td>0</td></tr>\n",
        "<tr><td>17</td><td>SGP</td><td>20180221</td><td>20180221</td><td>29790690</td><td>294.5684540900642</td><td>45192530880</td><td>45.19 GB</td><td>3511594</td><td>17057212</td><td>352804</td></tr>\n",
        "<tr><td>18</td><td>SPIRE-NEP</td><td>20180220</td><td>20180220</td><td>2674</td><td>0.1280660469377391</td><td>1203840</td><td>1.2 MB</td><td>0</td><td>0</td><td>0</td></tr>\n",
        "<tr><td>19</td><td>SSDF</td><td>20180221</td><td>20180221</td><td>12661903</td><td>111.11624949343539</td><td>8078319360</td><td>8.08 GB</td><td>0</td><td>9268783</td><td>0</td></tr>\n",
-       "<tr><td>20</td><td>xFLS</td><td>20180501</td><td>20180501</td><td>977148</td><td>7.44043242140754</td><td>1050474240</td><td>1.05 GB</td><td>0</td><td>0</td><td>0</td></tr>\n",
-       "<tr><td>21</td><td>XMM-13hr</td><td>20180501</td><td>20180501</td><td>38629</td><td>0.7570240166583633</td><td>10676160</td><td>10.68 MB</td><td>0</td><td>0</td><td>0</td></tr>\n",
+       "<tr><td>20</td><td>xFLS</td><td>20180501</td><td>20180501</td><td>977148</td><td>7.44043242140754</td><td>1050474240</td><td>1.05 GB</td><td>52187</td><td>101282</td><td>0</td></tr>\n",
+       "<tr><td>21</td><td>XMM-13hr</td><td>20180501</td><td>20180501</td><td>38629</td><td>0.7570240166583633</td><td>10676160</td><td>10.68 MB</td><td>0</td><td>10777</td><td>0</td></tr>\n",
        "<tr><td>22</td><td>XMM-LSS</td><td>20190328</td><td>20190328</td><td>8705837</td><td>21.75457939331374</td><td>28241838720</td><td>28.24 GB</td><td>287599</td><td>6152920</td><td>61892</td></tr>\n",
        "</table><style>table.dataTable {clear: both; width: auto !important; margin: 0 !important;}\n",
        ".dataTables_info, .dataTables_length, .dataTables_filter, .dataTables_paginate{\n",
@@ -613,14 +619,14 @@
        "    datatables: 'https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min'\n",
        "}});\n",
        "require([\"datatables\"], function(){\n",
-       "    console.log(\"$('#table140620039246344-582025').dataTable()\");\n",
+       "    console.log(\"$('#table140405143754680-748568').dataTable()\");\n",
        "    \n",
        "jQuery.extend( jQuery.fn.dataTableExt.oSort, {\n",
        "    \"optionalnum-asc\": astropy_sort_num,\n",
        "    \"optionalnum-desc\": function (a,b) { return -astropy_sort_num(a, b); }\n",
        "});\n",
        "\n",
-       "    $('#table140620039246344-582025').dataTable({\n",
+       "    $('#table140405143754680-748568').dataTable({\n",
        "        order: [],\n",
        "        pageLength: 50,\n",
        "        lengthMenu: [[10, 25, 50, 100, 500, 1000, -1], [10, 25, 50, 100, 500, 1000, 'All']],\n",
@@ -652,10 +658,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "XID+: There are 15 fields with XID+ fluxes computed totalling 1135.96 square degrees.\n",
-      "      This is a total of 10465980 objects with an average of 7% of objects on processed areas.\n",
-      "Photo-zs: There are 16 fields with photozs computed totalling 1241.93 square degrees.\n",
-      "      This is a total of 93968737 objects with an average of 56% of objects on processed areas.\n",
+      "XID+: There are 17 fields with XID+ fluxes computed totalling 1152.60 square degrees.\n",
+      "      This is a total of 10553486 objects with an average of 7% of objects on processed areas.\n",
+      "Photo-zs: There are 20 fields with photozs computed totalling 1251.07 square degrees.\n",
+      "      This is a total of 94091138 objects with an average of 55% of objects on processed areas.\n",
       "CIGALE SEDs: There are 13 fields with SEDs computed totalling 764.02 square degrees.\n",
       "      This is a total of 1148263 objects with an average of 1% of objects on processed areas.\n"
      ]
