--- a/dmu32/dmu32_xFLS/xFLS_catalogue_merging.ipynb
+++ b/dmu32/dmu32_xFLS/xFLS_catalogue_merging.ipynb
@@ -570,7 +570,11 @@
     "if MAKE_FINAL:\n",
     "\n",
     "    # Check that we did not forget any column\n",
-    "    assert set(columns) == set(merged_table.colnames)"
+    "    try:\n",
+    "        assert set(columns) == set(merged_table.colnames)\n",
+    "    except:\n",
+    "        print(set(columns) - set(merged_table.colnames))\n",
+    "        print( set(merged_table.colnames) - set(columns) )"
    ]
   },
   {
