--- a/dmu32/dmu32_xFLS/xFLS_catalogue_merging.ipynb
+++ b/dmu32/dmu32_xFLS/xFLS_catalogue_merging.ipynb
@@ -368,7 +368,7 @@
      "output_type": "stream",
      "text": [
       "set()\n",
-      "{'flag_irac_i3_ap', 'flag_irac_i2_ap', 'flag_irac_i4_ap', 'flag_irac_i1_ap'}\n"
+      "{'flag_irac_i3_ap', 'flag_irac_i4_ap', 'flag_irac_i2_ap', 'flag_irac_i1_ap'}\n"
      ]
     },
     {
@@ -565,7 +565,16 @@
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "set()\n",
+      "{'flag_irac_i3_ap', 'flag_irac_i4_ap', 'flag_irac_i2_ap', 'flag_irac_i1_ap'}\n"
+     ]
+    }
+   ],
    "source": [
     "if MAKE_FINAL:\n",
     "\n",
@@ -590,7 +599,16 @@
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: UnitsWarning: 'muJy' did not parse as fits unit: At col 0, Unit 'muJy' not supported by the FITS standard. Did you mean MJy, mJy or uJy? [astropy.units.core]\n",
+      "WARNING:astropy:UnitsWarning: 'muJy' did not parse as fits unit: At col 0, Unit 'muJy' not supported by the FITS standard. Did you mean MJy, mJy or uJy?\n"
+     ]
+    }
+   ],
    "source": [
     "if MAKE_FINAL:\n",
     "\n",
@@ -615,7 +633,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
