--- a/dmu28/dmu28_SSDF/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_SSDF/CIGALE_catalogue_preparation.ipynb
@@ -109,7 +109,15 @@
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of good sources: 0\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Number of good sources: {}\".format(np.sum(combined_good)))"
    ]
@@ -142,7 +150,7 @@
    },
    "outputs": [],
    "source": [
-    "#best_catalogue = master_catalogue[combined_good].copy()"
+    "best_catalogue = master_catalogue[combined_good].copy()"
    ]
   },
   {
@@ -163,17 +171,7 @@
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:herschelhelp.external:For 70 sources, the band decam_g should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
-      "INFO:herschelhelp.external:For 42 sources, the band decam_r should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
-      "INFO:herschelhelp.external:For 12 sources, the band decam_i should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Convertion to CIGALE format\n",
     "best_catalogue = convert_table_for_cigale(best_catalogue, inplace=True, remove_zerofluxes=True)"
@@ -289,7 +287,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of sources with z-spec: 1180223\n"
+      "Number of sources with z-spec: 598\n"
      ]
     }
    ],
@@ -315,17 +313,7 @@
    "metadata": {
     "collapsed": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:herschelhelp.external:For 53 sources, the band decam_g should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
-      "INFO:herschelhelp.external:For 29 sources, the band decam_r should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
-      "INFO:herschelhelp.external:For 12 sources, the band decam_i should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Convertion to CIGALE format\n",
     "os.environ['LOG_LEVEL'] = 'INFO'\n",
@@ -376,7 +364,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
