HDF-N optnir issue

--- a/dmu28/dmu28_HDF-N/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_HDF-N/CIGALE_catalogue_preparation.ipynb
@@ -123,8 +123,41 @@
    "outputs": [],
    "source": [
     "# Only sources with at least two optical and at least two near infrared detections\n",
-    "optnir = ((master_catalogue['flag_optnir_det'] == 3) \n",
-    "          | (master_catalogue['flag_optnir_det'] == 7))"
+    "# HDF-N masterlist ignored some of the nir fluxes\n",
+    "#optnir = ((master_catalogue['flag_optnir_det'] == 3) \n",
+    "#          | (master_catalogue['flag_optnir_det'] == 7))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nb_optical_flux = (\n",
+    "    # PanSTARRS\n",
+    "    1 * ~np.isnan(master_catalogue['f_gpc1_g']) +\n",
+    "    1 * ~np.isnan(master_catalogue['f_gpc1_r']) +\n",
+    "    1 * ~np.isnan(master_catalogue['f_gpc1_i']) +\n",
+    "    1 * ~np.isnan(master_catalogue['f_gpc1_z']) +\n",
+    "    1 * ~np.isnan(master_catalogue['f_gpc1_y']) +\n",
+    "    1 * ~np.isnan(master_catalogue['f_suprime_r']) + \n",
+    "    1 * ~np.isnan(master_catalogue['f_suprime_ip']) +\n",
+    "    1 * ~np.isnan(master_catalogue['f_suprime_zp'])\n",
+    ")\n",
+    "\n",
+    "nb_nir_flux = (\n",
+    "    1 * ~np.isnan(master_catalogue['f_wircam_ks']) +\n",
+    "    1 * ~np.isnan(master_catalogue['f_quirc_hk']) +\n",
+    "    1 * ~np.isnan(master_catalogue['f_moircs_k'])\n",
+    ")\n",
+    "\n",
+    "has_optical_flux = nb_optical_flux >= 2\n",
+    "has_nir_flux = nb_nir_flux >= 2\n",
+    "\n",
+    "optnir = has_optical_flux & has_nir_flux\n",
+    "\n",
+    "print(\"Number of optnir sources: {}\".format(np.sum(combined_good)))"
    ]
   },
   {
@@ -369,7 +402,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
