--- a/dmu26/dmu26_XID+PACS_ELAIS-N2/XID+PACS_prior_SWIRE.ipynb
+++ b/dmu26/dmu26_XID+PACS_ELAIS-N2/XID+PACS_prior_SWIRE.ipynb
@@ -260,30 +260,28 @@
     "from astropy.io import fits\n",
     "from astropy import wcs\n",
     "\n",
+    "\n",
     "#-----100-------------\n",
     "hdulist = fits.open(im100fits)\n",
     "im100phdu=hdulist['PRIMARY'].header\n",
-    "im100=hdulist['IMAGE'].data*2.35045e-5*(np.abs(hdulist[1].header['CDELT1'])*3600)**2\n",
-    "hdulist['IMAGE'].header['BUNIT']='Jy/pix'\n",
     "im100hdu=hdulist['IMAGE'].header\n",
-    "\n",
+    "im100=hdulist['IMAGE'].data\n",
     "w_100 = wcs.WCS(hdulist['IMAGE'].header)\n",
     "pixsize100=3600.0*np.abs(hdulist['IMAGE'].header['CDELT1']) #pixel size (in arcseconds)\n",
-    "nim100=hdulist['ERROR'].data*2.35045e-5*(np.abs(hdulist[1].header['CDELT1'])*3600)**2\n",
+    "nim100=hdulist['ERROR'].data\n",
     "\n",
     "hdulist.close()\n",
     "\n",
     "#-----160-------------\n",
     "hdulist = fits.open(im160fits)\n",
     "im160phdu=hdulist['PRIMARY'].header\n",
-    "im160=hdulist['IMAGE'].data*2.35045e-5*(np.abs(hdulist[1].header['CDELT1'])*3600)**2\n",
-    "hdulist['IMAGE'].header['BUNIT']='Jy/pix'\n",
     "im160hdu=hdulist['IMAGE'].header\n",
-    "\n",
+    "im160=hdulist['IMAGE'].data\n",
     "w_160 = wcs.WCS(hdulist['IMAGE'].header)\n",
     "pixsize160=3600.0*np.abs(hdulist['IMAGE'].header['CDELT1']) #pixel size (in arcseconds)\n",
-    "nim160=hdulist['ERROR'].data*2.35045e-5*(np.abs(hdulist[1].header['CDELT1'])*3600)**2\n",
-    "hdulist.close()"
+    "nim160=hdulist['ERROR'].data\n",
+    "\n",
+    "hdulist.close()\n"
    ]
   },
   {
@@ -522,7 +520,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
