--- a/dmu26/dmu26_XID+PACS_GAMA-09/XID+PACS_prior.ipynb
+++ b/dmu26/dmu26_XID+PACS_GAMA-09/XID+PACS_prior.ipynb
@@ -314,27 +314,31 @@
    "source": [
     "from astropy.io import fits\n",
     "from astropy import wcs\n",
+    "from astropy.io import fits\n",
+    "from astropy import wcs\n",
+    "\n",
     "\n",
     "#-----100-------------\n",
-    "hdulist = fits.open(PACS_100)\n",
-    "im100phdu=hdulist[0].header\n",
-    "im100hdu=hdulist[1].header\n",
-    "im100=hdulist[1].data\n",
-    "w_100 = wcs.WCS(hdulist[1].header)\n",
-    "pixsize100=3600.0*np.abs(hdulist[1].header['CDELT1']) #pixel size (in arcseconds)\n",
-    "nim100=hdulist[2].data\n",
+    "hdulist = fits.open(im100fits)\n",
+    "im100phdu=hdulist['PRIMARY'].header\n",
+    "im100hdu=hdulist['IMAGE'].header\n",
+    "im100=hdulist['IMAGE'].data\n",
+    "w_100 = wcs.WCS(hdulist['IMAGE'].header)\n",
+    "pixsize100=3600.0*np.abs(hdulist['IMAGE'].header['CDELT1']) #pixel size (in arcseconds)\n",
+    "nim100=hdulist['ERROR'].data\n",
+    "\n",
     "hdulist.close()\n",
     "\n",
     "#-----160-------------\n",
-    "hdulist = fits.open(PACS_160)\n",
-    "im160phdu=hdulist[0].header\n",
-    "im160hdu=hdulist[1].header\n",
+    "hdulist = fits.open(im160fits)\n",
+    "im160phdu=hdulist['PRIMARY'].header\n",
+    "im160hdu=hdulist['IMAGE'].header\n",
+    "im160=hdulist['IMAGE'].data\n",
+    "w_160 = wcs.WCS(hdulist['IMAGE'].header)\n",
+    "pixsize160=3600.0*np.abs(hdulist['IMAGE'].header['CDELT1']) #pixel size (in arcseconds)\n",
+    "nim160=hdulist['ERROR'].data\n",
     "\n",
-    "im160=hdulist[1].data #convert to mJy\n",
-    "w_160 = wcs.WCS(hdulist[1].header)\n",
-    "pixsize160=3600.0*np.abs(hdulist[1].header['CDELT1']) #pixel size (in arcseconds)\n",
-    "nim160=hdulist[2].data\n",
-    "hdulist.close()"
+    "hdulist.close()\n"
    ]
   },
   {
