--- a/dmu28/dmu28_SA13/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_SA13/CIGALE_catalogue_preparation.ipynb
@@ -126,7 +126,7 @@
    "source": [
     "# Only sources with at least two optical and at least two near infrared detections\n",
     "optnir = ((master_catalogue['flag_optnir_det'] == 1) \n",
-    "          & ~np.isnan(master_catalogue['f_ukidss_j'])"
+    "          & ~np.isnan(master_catalogue['f_ukidss_j']) )"
    ]
   },
   {
@@ -259,8 +259,8 @@
    },
    "outputs": [],
    "source": [
-    "#best_catalogue.remove_column(\"redshift\")\n",
-    "#best_catalogue[\"zspec\"].name = \"redshift\""
+    "best_catalogue.remove_column(\"redshift\")\n",
+    "best_catalogue[\"zspec\"].name = \"redshift\""
    ]
   },
   {
@@ -285,7 +285,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of sources with z-spec: 0\n"
+      "Number of sources with z-spec: 61\n"
      ]
     }
    ],
@@ -362,7 +362,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
