--- a/dmu28/dmu28_XMM-13hr/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_XMM-13hr/CIGALE_catalogue_preparation.ipynb
@@ -33,7 +33,7 @@
    },
    "outputs": [],
    "source": [
-    "SUFFIX = '20180221'\n",
+    "SUFFIX = '20180501'\n",
     "master_catalogue = Table.read(\"../../dmu32/dmu32_XMM-13hr/data/XMM-13hr_{}_cigale.fits\".format(SUFFIX))"
    ]
   },
@@ -126,7 +126,7 @@
    "source": [
     "# Only sources with at least two optical and at least two near infrared detections\n",
     "optnir = ((master_catalogue['flag_optnir_det'] == 1) \n",
-    "          & ~np.isnan(master_catalogue['f_ukidss_j'])"
+    "          & ~np.isnan(master_catalogue['f_ukidss_j']) )"
    ]
   },
   {
@@ -229,7 +229,7 @@
    },
    "outputs": [],
    "source": [
-    "best_catalogue.write(\"data_tmp/SA13_cigale_optnir_extcor_{}.fits\".format(SUFFIX), overwrite=True)"
+    "best_catalogue.write(\"data_tmp/XMM-13hr_cigale_optnir_extcor_{}.fits\".format(SUFFIX), overwrite=True)"
    ]
   },
   {
@@ -284,7 +284,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of sources with z-spec: 0\n"
+      "Number of sources with z-spec: 3669\n"
      ]
     }
    ],
@@ -362,7 +362,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
